# Bai_Tap

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  file-list.txt  index.html  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: admin-service.yml  content-service.yml  coverage-check.yml  docker-build-all.yml  docker-hub-setup.yml  frontend.yml  math-solver-service.yml  payment-service.yml  user-service.yml
demo-site/: file-list.txt  files.html  index.html
docs/: api-endpoints.md  database-schema.md  development-setup.md  docker-hub-setup.md  environment-variables.md
docs/adr/: ADR-001-template.md
frontend/: Dockerfile  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/__tests__/components/: Footer.test.tsx  Header.test.tsx  Layout.test.tsx
frontend/__tests__/pages/: index.test.tsx
frontend/__tests__/utils/: api.test.ts
frontend/components/: Footer.tsx  Header.tsx  Layout.tsx
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  index.ts
scripts/: README.md  init-databases.sql  setup-dev.bat  setup-dev.sh  update-workflows-dockerhub.sh
scripts/admin-service/: init.sql
scripts/content-service/: init.sql
scripts/math-solver-service/: init.sql
scripts/payment-service/: init.sql
scripts/user-service/: init.sql
services/admin-service/: requirements.txt
services/admin-service/tests/: conftest.py
services/admin-service/tests/integration/: test_api_endpoints.py
services/admin-service/tests/unit/: test_audit_logging.py  test_system_monitoring.py
services/content-service/tests/: conftest.py
services/content-service/tests/integration/: test_api_endpoints.py
services/content-service/tests/unit/: test_content_crud.py  test_seo_service.py
services/math-solver-service/: Dockerfile
services/math-solver-service/tests/: conftest.py
services/math-solver-service/tests/integration/: test_api_endpoints.py
services/math-solver-service/tests/unit/: test_algebra_solver.py  test_calculus_solver.py
services/payment-service/tests/: conftest.py
services/payment-service/tests/integration/: test_api_endpoints.py
services/payment-service/tests/unit/: test_payment_gateway.py  test_transaction_crud.py
services/user-service/tests/: conftest.py
services/user-service/tests/integration/: test_api_endpoints.py
services/user-service/tests/unit/: test_auth.py  test_user_crud.py
