# Python Project Configuration
# File: pyproject.toml
# Cấu hình cho các Python tools: Black, isort, pytest, mypy

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-service-website"
version = "1.0.0"
description = "Website dịch vụ toán học với kiến trúc microservices"
authors = [
    {name = "Math Service Team", email = "dev@mathservice.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.1",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "pytest>=7.4.3",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
]

# =============================================================================
# BLACK FORMATTER CONFIGURATION
# =============================================================================

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.venv
    | venv
    | build
    | dist
    | migrations
)/
'''

# =============================================================================
# ISORT IMPORT SORTING CONFIGURATION
# =============================================================================

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

known_first_party = [
    "services.user_service",
    "services.payment_service",
    "services.math_solver_service",
    "services.content_service",
    "services.admin_service",
]

sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

# =============================================================================
# PYTEST TESTING CONFIGURATION
# =============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "services/user-service/tests",
    "services/payment-service/tests",
    "services/math-solver-service/tests",
    "services/content-service/tests",
    "services/admin-service/tests",
    "tests",
]

python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

addopts = [
    "-ra",
    "--strict-markers",
    "--cov=services",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
    "--tb=short",
]

markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "database: marks tests that require database",
    "redis: marks tests that require Redis",
]

asyncio_mode = "auto"
